feat: First version of data op and project impl on spark